# xiaohongshu-skills

./: README.md  SKILL.md  pyproject.toml
reddit-skills/: .env.example  .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
reddit-skills/scripts/: auto_marketing.py  cli.py
reddit-skills/scripts/reddit/: __init__.py  auth.py  comment.py  discover.py  rate_limit.py  search.py
reddit-skills/skills/reddit-auto-marketing/: SKILL.md
reddit-skills/skills/reddit-discover/: SKILL.md
reddit-skills/skills/reddit-engage/: SKILL.md
reddit-skills/skills/reddit-monitor/: SKILL.md
scripts/: auto_marketing.py  batch_like.py  batch_like_comment.py  chrome_launcher.py  cli.py  image_gen.py  proxy_bridge.py  vnc_display.py
scripts/xhs/: browse.py  cdp.py  comment.py  errors.py  like_favorite.py  publish.py  rate_limit.py  search.py
skills/xhs-auth/: SKILL.md
skills/xhs-auto-marketing/: SKILL.md
skills/xhs-explore/: SKILL.md
skills/xhs-publish/: SKILL.md
social-media-promoter/: .env.example  README.md  SKILL.md
social-media-promoter/scripts/: campaign_orchestrator.py  content_generator.py  platform_poster.py
social-media-promoter/templates/: STRATEGY.md  campaign_config.yaml  discord_announcement.md  product_brief.json  producthunt_launch.md  reddit_post.md  x_thread.md  xiaohongshu_post.md  zhihu_article.md
